Fixed load on small screens

--- a/styles.css
+++ b/styles.css
@@ -256,10 +256,8 @@ main {
   left: 48%;
   width: 50px;
   height: 50px;
-  /* border: 6px solid #ddd;
-  border-top: 6px solid #3498db; */
-  border: 6px solid black;
-  border-top: 6px solid wheat;
+  border: 6px solid var(--main-color);
+  border-top: 6px solid var(--text-color);
   border-radius: 50%;
   animation: spin 1s linear infinite;
   z-index: 1000;
@@ -573,6 +571,12 @@ main {
 
   .info-temp {
     font-size: 5rem;
+  }
+
+  .load {
+    top: 40%;
+
+    left: 40%;
   }
 
   .temp-card-forecast {
